Fixed the logo display problem and some ipynb code block buttons (red border around ! and copy buttons not correctly formatted). Still need to fix code block display in dark mode and index display problem

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -2,3 +2,8 @@ img {
   width: auto;
   height: 24px; 
 }
+
+.highlight .err {
+    border: none !important;
+    background-color: transparent !important;
+}
